[APB-934][RV,JR] Change agent-epay-registration backend endpoint in conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,8 +115,8 @@ Prod {
 
     services {
       agent-epaye-registration {
-        host = localhost
-        port = 9445
+        host = agent-epaye-registration.protected.mdtp
+        port = 80
       }
     }
   }
