--- a/conf/application.conf
+++ b/conf/application.conf
@@ -105,7 +105,7 @@ Prod {
         host = localhost
         port = 2003
         prefix = play.${appName}.
-        enabled = false
+        enabled = true
       }
     }
 
