[APB-1388][RV,AO] simplify metrics configuration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,17 +50,19 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline'
 
 play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
 
+microservice {
+  metrics {
+    graphite {
+      host = graphite
+      port = 2003
+      prefix = play.${appName}.
+      enabled = false
+    }
+  }
+}
+
 Dev {
   microservice {
-    metrics {
-      graphite {
-        host = localhost
-        port = 2003
-        prefix = play.${appName}.
-        enabled = false
-      }
-    }
-
     services {
       agent-epaye-registration {
         host = localhost
@@ -76,15 +78,6 @@ Dev {
 
 Test {
   microservice {
-    metrics {
-      graphite {
-        host = localhost
-        port = 2003
-        prefix = play.${appName}.
-        enabled = false
-      }
-    }
-
     services {
       agent-epaye-registration {
         host = localhost
@@ -100,15 +93,6 @@ Test {
 
 Prod {
   microservice {
-    metrics {
-      graphite {
-        host = localhost
-        port = 2003
-        prefix = play.${appName}.
-        enabled = true
-      }
-    }
-
     services {
       agent-epaye-registration {
         host = agent-epaye-registration.protected.mdtp
