--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,41 +14,15 @@
 
 include "common.conf"
 
-appName = "agent-epaye-registration-frontend"
-
-play.ws.acceptAnyCertificate = true
-
-cookie.deviceId.secret = "some_secret"
-
-# Session configuration
-play.http.session.httpOnly = true
-
-play.http.session.secure = false
-
-play.http.session.cookieName = "mdtp"
-
-# The application languages
-play.i18n.langs = ["en"]
-
-controllers {
-  # govuk template controller
-  controllers.template.Template {
-    needsAuth = false
-    needsAuditing = false
-    needsLogging = false
-  }
-}
-
-caching.allowedContentTypes = ["image/", "text/css", "application/javascript"]
-
-# default whitelist for CSRFExceptionsFilter
-csrfexceptions.whitelist = ["/ida/login", "/ssoin", "/contact/problem_reports"]
+appName = "Agent Epaye Registration"
 
 play.http.router = prod.Routes
 
+play.http.filters=FrontendFilters
 play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
 
-play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+play.modules.enabled += "uk.gov.hmrc.play.graphite.GraphiteMetricsModule"
+play.modules.enabled += "FrontendModule"
 
 microservice {
   metrics {
@@ -57,6 +31,7 @@ microservice {
       port = 2003
       prefix = play.${appName}.
       enabled = false
+      legacy = false
     }
   }
 }
