--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,17 +12,35 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-include "common.conf"
+include "frontend.conf"
 
-appName = "Agent Epaye Registration"
+# An ApplicationLoader that uses Guice to bootstrap the application.
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
+# Primary entry point for all HTTP requests on Play applications
+play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+
+# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
+# An audit connector must be provided.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+
+# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
+# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+
+# Provides an implementation and configures all filters required by a Platform frontend microservice.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.FrontendModule"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.FrontendFilters"
+
+# Custom error handler
+play.http.errorHandler = "ErrorHandler"
+
+appName = "Agent EPAYE Registration"
 play.http.router = prod.Routes
-
-play.http.filters=FrontendFilters
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9000 localhost:9032 www.google-analytics.com data:"
-
-play.modules.enabled += "uk.gov.hmrc.play.graphite.GraphiteMetricsModule"
 play.modules.enabled += "FrontendModule"
+
+play.filters.headers.contentSecurityPolicy= "default-src 'self' 'unsafe-inline' localhost:9446 localhost:9032 www.google-analytics.com data:"
+
 
 microservice {
   metrics {
