[APB-2106] testing contact-frontend url

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -132,8 +132,8 @@ assets {
 
 contact-frontend-host = "http://localhost:9250"
 
-reportAProblemPartialUrl = ${contact-frontend-host}"/contact/problem_reports_ajax?service="${appName}
-reportAProblemNonJSUrl = ${contact-frontend-host}"/contact/problem_reports_nonjs?service="${appName}
+reportAProblemPartialUrl = "/contact/problem_reports_ajax?service=AGENT_EPAYE"
+reportAProblemNonJSUrl = ${contact-frontend-host}"/contact/problem_reports_nonjs?service=AGENT_EPAYE"
 
 controllers {
   com.kenshoo.play.metrics.MetricsController = {
