[APB-2106][SS] added relative urls for contact-frontend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,10 +130,8 @@ assets {
   url = "http://localhost:9032/assets/"
 }
 
-contact-frontend-host = "http://localhost:9250"
-
 reportAProblemPartialUrl = "/contact/problem_reports_ajax?service=AGENT_EPAYE"
-reportAProblemNonJSUrl = ${contact-frontend-host}"/contact/problem_reports_nonjs?service=AGENT_EPAYE"
+reportAProblemNonJSUrl = "/contact/problem_reports_nonjs?service=AGENT_EPAYE"
 
 controllers {
   com.kenshoo.play.metrics.MetricsController = {
