--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,7 +35,7 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.FrontendFilters"
 # Custom error handler
 play.http.errorHandler = "ErrorHandler"
 
-appName = "Agent EPAYE Registration"
+appName = "agent-epaye-registration-frontend"
 play.http.router = prod.Routes
 play.modules.enabled += "FrontendModule"
 
