DL-4232 - A11y statement functionality for OPRA

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -117,3 +117,5 @@ controllers {
 }
 
 extract.auth.stride.enrolment = "T2 Technical"
+
+accessibility-statement.service-path = "/agent-epaye-registration"
