--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-# Copyright 2020 HM Revenue & Customs
+# Copyright 2021 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,6 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
+include "frontend.conf"
 
 appName = "agent-epaye-registration-frontend"
 play.http.router = prod.Routes
@@ -30,14 +32,17 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.FrontendModule"
-play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.FrontendFilters"
+
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.frontend.FrontendModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.frontend.filters.FrontendFilters"
+
 
 # Custom error handler
 play.http.errorHandler = "ErrorHandler"
 play.modules.enabled += "FrontendModule"
 
-play.filters.headers.contentSecurityPolicy= "default-src 'self' 'unsafe-inline' localhost:9446 localhost:9032 www.google-analytics.com data:"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9446 localhost:9032 www.google-analytics.com data:"
 play.http.secret.key = "YKMFjtj/reybXvKVGFDD3pfPJi6/tC2GELPclOfFQgY="
 
 cookie.encryption.key = "gvBoGdgzqG1AarzF1LY0zQ=="
