--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,7 +42,7 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.frontend.filters.FrontendFilters
 play.http.errorHandler = "ErrorHandler"
 play.modules.enabled += "FrontendModule"
 
-play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9446 localhost:9032 www.google-analytics.com data:"
+play.filters.headers.contentSecurityPolicy = "default-src 'self' 'unsafe-inline' localhost:9446 localhost:9032 www.google-analytics.com www.googletagmanager.com fonts.googleapis.com tagmanager.google.com ssl.gstatic.com www.gstatic.com fonts.gstatic.com data:"
 play.http.secret.key = "YKMFjtj/reybXvKVGFDD3pfPJi6/tC2GELPclOfFQgY="
 
 cookie.encryption.key = "gvBoGdgzqG1AarzF1LY0zQ=="
@@ -98,8 +98,12 @@ auditing {
 }
 
 google-analytics {
-  token = N/A
+  token = XXXXXXX
   host = auto
+}
+
+google-tag-manager {
+  id = N/A
 }
 
 assets {
