DL-6186 - Amended feedback-frontend link

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,12 +56,6 @@ microservice {
         port     = 8500
       }
 
-      feedback-frontend {
-        protocol = http
-        host     = localhost
-        port     = 9514
-      }
-
       agent-epaye-registration {
         protocol = http
         host = localhost
@@ -94,6 +88,10 @@ auditing {
 contact-frontend {
   host      = "http://localhost:9250"
   serviceId = "agent-epaye-registration-frontend"
+}
+
+feedback-frontend {
+  host      = "http://localhost:9514"
 }
 
 timeout-dialog {
