DL-12129 add Welsh for entire service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,7 +29,7 @@ play.modules.enabled += "config.Module"
 play.filters.enabled += "uk.gov.hmrc.play.bootstrap.frontend.filters.SessionIdFilter"
 play.filters.enabled += play.filters.csp.CSPFilter
 
-play.i18n.langs = ["en"]
+play.i18n.langs = ["en", "cy"]
 
 microservice {
     services {
@@ -88,7 +88,7 @@ tracking-consent-frontend{
 }
 
 features {
-  welsh-translation: false
+  welsh-translation: true
 }
 
 accessibility-statement.service-path = "/agent-epaye-registration"
