--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,9 +21,11 @@ play.http.router = prod.Routes
 play.http.errorHandler = "handlers.ErrorHandler"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 play.modules.enabled += "config.Module"
+
 
 play.filters.enabled += "uk.gov.hmrc.play.bootstrap.frontend.filters.SessionIdFilter"
 play.filters.enabled += play.filters.csp.CSPFilter
