DL-16804: Set GOV Uk rebrand feature toggle to true

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,10 @@ feedback-frontend {
   host      = "http://localhost:9514"
 }
 
+play-frontend-hmrc {
+    useRebrand = true
+}
+
 timeout-dialog {
   timeout   = 900
   countdown = 120
